# ambient-color

./: .gitignore  Cargo.toml  README.md  ambient  ambient-color.service  ambient-color.timer  ambient.sh  build  readme.md  theme  theme.sh  todo.md
android_ffi/: Cargo.toml
android_ffi/AmbientColor/: settings.gradle.kts
android_ffi/AmbientColor/gradle/: libs.versions.toml
android_ffi/AmbientColor/watchface/: build.gradle.kts
android_ffi/src/: lib.rs
cli/: Cargo.toml
cli/src/: home_assistant.rs  main.rs  templates.rs  wallpaper.rs
cli/templates/: ashell.toml  clipse_theme.json  colors.lua  fnott.ini  foot.ini  gtk.css  hyprland.conf  hyprlock.conf  rofi.rasi  tmux.conf
core_logic/: Cargo.toml  mock-data.json
core_logic/src/: color.rs  data.rs  distance.rs  lib.rs  network.rs  palette.json  parse.rs  theme.rs
palette-generator/: index.js  package-lock.json  package.json
templates/: .zshrc  ashell.toml  clipse_theme.json  colors.lua  fnott.ini  foot.ini  gtk.css  hyprland.conf  hyprlock.conf  rofi.rasi  tmux.conf
wasm_wrapper/: Cargo.toml  index.html
wasm_wrapper/ambient-color/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
wasm_wrapper/ambient-color/src/: App.tsx  Controls.tsx  CurrentColor.tsx  CurrentColorControls.tsx  CurrentTheme.module.css  CurrentTheme.tsx  Simulator.tsx  SimulatorControls.tsx  ThemeData.tsx  ThemeDisplay.tsx  computeTheme.ts  config.ts  global.d.ts  index.css  index.tsx  timeFromTimestamp.ts  wasm.schema.ts  wasm.ts
wasm_wrapper/src/: lib.rs
(+5 files in other folders)
