[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
core_logic = { version = "0.1.0", path = "../core_logic" }
directories = "6.0.0"
minijinja = "2.19.0"
serde = "1.0.228"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-webpki-roots", "json", "charset", "http2"] }
serde_json = "1.0.149"
tiny-skia = "0.12.0"
tokio = { version = "1.50.0", features = ["full"] }
keyring = "4.1.2"
