[package]
name = "core_logic"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
palette = "0.7.6"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-webpki-roots", "json", "charset", "http2"] }
serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]
approx = "0.5.1"
