[package]
name = "wasm_wrapper"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
core_logic = { path = "../core_logic" }
serde = { version = "1.0.228", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.115"
wasm-bindgen-futures = "0.4.65"
